--- a/api/build.gradle
+++ b/api/build.gradle
@@ -9,7 +9,6 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
@@ -27,7 +26,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("com.h2database:h2")
+    compile("org.postgresql:postgresql:42.2.1.jre7")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
