--- a/api/build.gradle
+++ b/api/build.gradle
@@ -26,6 +26,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.liquibase:liquibase-core:3.5.3")
     compile("org.postgresql:postgresql:42.2.1.jre7")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
